--- a/notebook/stock_analysis.ipynb
+++ b/notebook/stock_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "id": "b0e3be46",
    "metadata": {},
    "outputs": [],
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 42,
    "id": "a49fcba3",
    "metadata": {},
    "outputs": [],
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "id": "dc7ebc2a",
    "metadata": {},
    "outputs": [],
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 44,
    "id": "ebbb7bf0",
    "metadata": {},
    "outputs": [],
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 45,
    "id": "1a1b4957",
    "metadata": {},
    "outputs": [],
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 46,
    "id": "7c5d45a5",
    "metadata": {},
    "outputs": [],
@@ -260,10 +260,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "62d4ac9e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Workbook 'workbook.xlsx' không được tìm thấy trong danh sách workbook đang mở.\n"
+     ]
+    }
+   ],
    "source": [
     "fs_dict = get_financial_statements(\n",
     "    stock='HPG',\n",
@@ -299,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 48,
    "id": "99d34be2",
    "metadata": {},
    "outputs": [],
@@ -346,10 +354,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 49,
    "id": "b3a59755",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "\nImage export using the \"kaleido\" engine requires the kaleido package,\nwhich can be installed using pip:\n    $ pip install -U kaleido\n",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[49], line 51\u001b[0m\n\u001b[0;32m     49\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[0;32m     50\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m attempt \u001b[38;5;241m==\u001b[39m max_attempts \u001b[38;5;241m-\u001b[39m \u001b[38;5;241m1\u001b[39m:\n\u001b[1;32m---> 51\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m e\n",
+      "Cell \u001b[1;32mIn[49], line 37\u001b[0m\n\u001b[0;32m     35\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m attempt \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(max_attempts):\n\u001b[0;32m     36\u001b[0m     \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m---> 37\u001b[0m         fig, fig_images \u001b[38;5;241m=\u001b[39m create_financial_chart(\n\u001b[0;32m     38\u001b[0m             full_stock_ta_df\u001b[38;5;241m.\u001b[39msort_values(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdate\u001b[39m\u001b[38;5;124m'\u001b[39m), \u001b[38;5;66;03m# DataFrame của bạn\u001b[39;00m\n\u001b[0;32m     39\u001b[0m             width\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1400\u001b[39m,\n\u001b[0;32m     40\u001b[0m             height\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1200\u001b[39m,\n\u001b[0;32m     41\u001b[0m             line_name_dict\u001b[38;5;241m=\u001b[39mline_name_dict,\n\u001b[0;32m     42\u001b[0m             line_columns\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mlist\u001b[39m(line_name_dict\u001b[38;5;241m.\u001b[39mkeys()),\n\u001b[0;32m     43\u001b[0m             chart_config\u001b[38;5;241m=\u001b[39mchart_config,\n\u001b[0;32m     44\u001b[0m             symbol_name\u001b[38;5;241m=\u001b[39mmain_stock,\n\u001b[0;32m     45\u001b[0m             path\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m../output\u001b[39m\u001b[38;5;124m'\u001b[39m,\n\u001b[0;32m     46\u001b[0m             image_name \u001b[38;5;241m=\u001b[39m image_name\n\u001b[0;32m     47\u001b[0m         )\n\u001b[0;32m     48\u001b[0m         \u001b[38;5;28;01mbreak\u001b[39;00m\n\u001b[0;32m     49\u001b[0m     \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m e:\n",
+      "File \u001b[1;32md:\\twan-projects\\report-analysis\\module\\candle_chart.py:497\u001b[0m, in \u001b[0;36mcreate_financial_chart\u001b[1;34m(df, width, height, line_name_dict, line_columns, chart_config, path, image_name, symbol_name, time_frame)\u001b[0m\n\u001b[0;32m    494\u001b[0m _configure_layout_and_axes(fig, df, max_volume, chart_config, width, height)\n\u001b[0;32m    496\u001b[0m \u001b[38;5;66;03m# Chuyển đổi fig thành dạng bytes để có thể upload hoặc dùng sau này\u001b[39;00m\n\u001b[1;32m--> 497\u001b[0m image_bytes \u001b[38;5;241m=\u001b[39m fig\u001b[38;5;241m.\u001b[39mto_image(\u001b[38;5;28mformat\u001b[39m\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mpng\u001b[39m\u001b[38;5;124m\"\u001b[39m, width\u001b[38;5;241m=\u001b[39mwidth, height\u001b[38;5;241m=\u001b[39mheight, scale\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m2\u001b[39m)\n\u001b[0;32m    499\u001b[0m \u001b[38;5;66;03m# Lưu file nếu có đường dẫn\u001b[39;00m\n\u001b[0;32m    500\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m path \u001b[38;5;129;01mand\u001b[39;00m image_name:\n",
+      "File \u001b[1;32mc:\\Users\\APC\\anaconda3\\Lib\\site-packages\\plotly\\basedatatypes.py:3772\u001b[0m, in \u001b[0;36mBaseFigure.to_image\u001b[1;34m(self, *args, **kwargs)\u001b[0m\n\u001b[0;32m   3717\u001b[0m \u001b[38;5;250m\u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[0;32m   3718\u001b[0m \u001b[38;5;124;03mConvert a figure to a static image bytes string\u001b[39;00m\n\u001b[0;32m   3719\u001b[0m \n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m   3768\u001b[0m \u001b[38;5;124;03m    The image data\u001b[39;00m\n\u001b[0;32m   3769\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[0;32m   3770\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mplotly\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mio\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mpio\u001b[39;00m\n\u001b[1;32m-> 3772\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m pio\u001b[38;5;241m.\u001b[39mto_image(\u001b[38;5;28mself\u001b[39m, \u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)\n",
+      "File \u001b[1;32mc:\\Users\\APC\\anaconda3\\Lib\\site-packages\\plotly\\io\\_kaleido.py:132\u001b[0m, in \u001b[0;36mto_image\u001b[1;34m(fig, format, width, height, scale, validate, engine)\u001b[0m\n\u001b[0;32m    130\u001b[0m     \u001b[38;5;66;03m# Raise informative error message if Kaleido is not installed\u001b[39;00m\n\u001b[0;32m    131\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m scope \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m--> 132\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[0;32m    133\u001b[0m \u001b[38;5;250m            \u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[0;32m    134\u001b[0m \u001b[38;5;124;03mImage export using the \"kaleido\" engine requires the kaleido package,\u001b[39;00m\n\u001b[0;32m    135\u001b[0m \u001b[38;5;124;03mwhich can be installed using pip:\u001b[39;00m\n\u001b[0;32m    136\u001b[0m \u001b[38;5;124;03m    $ pip install -U kaleido\u001b[39;00m\n\u001b[0;32m    137\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[0;32m    138\u001b[0m         )\n\u001b[0;32m    140\u001b[0m     \u001b[38;5;66;03m# Validate figure\u001b[39;00m\n\u001b[0;32m    141\u001b[0m     \u001b[38;5;66;03m# ---------------\u001b[39;00m\n\u001b[0;32m    142\u001b[0m     fig_dict \u001b[38;5;241m=\u001b[39m validate_coerce_fig_to_dict(fig, validate)\n",
+      "\u001b[1;31mValueError\u001b[0m: \nImage export using the \"kaleido\" engine requires the kaleido package,\nwhich can be installed using pip:\n    $ pip install -U kaleido\n"
+     ]
+    }
+   ],
    "source": [
     "image_name = f'TA_{main_stock}.png'\n",
     "\n",
@@ -408,9 +432,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (Report Generator)",
+   "display_name": "base",
    "language": "python",
-   "name": "report-generator-venv"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
