--- a/notebook/stock_analysis.ipynb
+++ b/notebook/stock_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 2,
    "id": "b0e3be46",
    "metadata": {},
    "outputs": [],
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 3,
    "id": "a49fcba3",
    "metadata": {},
    "outputs": [],
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 4,
    "id": "dc7ebc2a",
    "metadata": {},
    "outputs": [],
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 5,
    "id": "ebbb7bf0",
    "metadata": {},
    "outputs": [],
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 6,
    "id": "1a1b4957",
    "metadata": {},
    "outputs": [],
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 7,
    "id": "7c5d45a5",
    "metadata": {},
    "outputs": [],
@@ -248,6 +248,75 @@
     "    temp_df = transform_to_long_format(df)\n",
     "    temp_df.to_csv(f'../data/clean/clean_{key}.csv', index=False)\n",
     "    clean_df_dict[key] = temp_df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ff76f018",
+   "metadata": {},
+   "source": [
+    "- Chuẩn hoá bảng PTCB"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c6094908",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ptcb_name_map = {\n",
+    "    'ROE % (TTM)': 'ROE',\n",
+    "    'ROA % (TTM)': 'ROA',\n",
+    "    'Tỷ suất lợi nhuận thuần (TTM)': 'Tỷ suất lợi nhuận thuần',\n",
+    "    'Tăng trưởng doanh thu thuần (YoY) (Quý)': 'Tăng trưởng doanh thu thuần',\n",
+    "    'Tăng trưởng lợi nhuận thuần (YoY) (Quý)': 'Tăng trưởng lợi nhuận thuần',\n",
+    "    'Tổng công nợ/ Vốn chủ sở hữu (TTM)': 'Tổng nợ/VCSH',\n",
+    "    'Tổng vốn vay/ VSCH (TTM)': 'Tổng vốn vay/VCSH',\n",
+    "    'Tổng vốn vay/ Tổng TS (TTM)': 'Tổng vốn vay/Tổng TS',\n",
+    "    'Tỷ lệ thanh toán hiện thời (TTM)': 'Tỷ lệ thanh toán hiện thời',\n",
+    "    '% Doanh thu kế hoạch (TTM)': 'Tỷ lệ hoàn thành doanh thu',\n",
+    "    '% LNST kế hoạch (TTM)': 'Tỷ lệ hoàn thành LNST',\n",
+    "    'Tỷ suất cổ tức (TTM)': 'Tỷ suất cổ tức',\n",
+    "    'Tỷ suất thanh toán cổ tức (TTM)': 'Tỷ suất chi trả cổ tức',\n",
+    "    'P/E cơ bản (TTM)': 'P/E',\n",
+    "    'P/B (TTM)': 'P/B',\n",
+    "    'Giá trị doanh nghiệp/ EBITDA (TTM)': 'EV/EBITDA',\n",
+    "    'Vốn hóa thị trường (TTM)': 'Vốn hóa thị trường'\n",
+    "}\n",
+    "\n",
+    "ptcb_group_map = {\n",
+    "    'Hiệu quả': [\n",
+    "        'ROE',\n",
+    "        'ROA',\n",
+    "        'Tỷ suất lợi nhuận thuần'\n",
+    "    ],\n",
+    "    'Tăng trưởng': [\n",
+    "        'Tăng trưởng doanh thu thuần',\n",
+    "        'Tăng trưởng lợi nhuận thuần'\n",
+    "    ],\n",
+    "    'Sức khỏe tài chính': [\n",
+    "        'Tổng nợ/VCSH',\n",
+    "        'Tổng vốn vay/VCSH',\n",
+    "        'Tổng vốn vay/Tổng TS',\n",
+    "        'Tỷ lệ thanh toán hiện thời'\n",
+    "    ],\n",
+    "    'So với kế hoạch': [\n",
+    "        'Tỷ lệ hoàn thành doanh thu',\n",
+    "        'Tỷ lệ hoàn thành LNST'\n",
+    "    ],\n",
+    "    'Cổ tức': [\n",
+    "        'Tỷ suất cổ tức',\n",
+    "        'Tỷ suất chi trả cổ tức'\n",
+    "    ],\n",
+    "    'Định giá': [\n",
+    "        'P/E',\n",
+    "        'P/B',\n",
+    "        'EV/EBITDA',\n",
+    "        'Vốn hóa thị trường'\n",
+    "    ]\n",
+    "}\n",
+    "\n"
    ]
   },
   {
@@ -274,9 +343,9 @@
    ],
    "source": [
     "fs_dict = get_financial_statements(\n",
-    "    stock='HPG',\n",
-    "    year='2024', \n",
-    "    quarter='4',\n",
+    "    stock=main_stock,\n",
+    "    year='2025', \n",
+    "    quarter='2',\n",
     "    period_count='16'\n",
     ")"
    ]
