--- a/notebook/stock_analysis.ipynb
+++ b/notebook/stock_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 126,
    "id": "b0e3be46",
    "metadata": {},
    "outputs": [],
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 127,
    "id": "a49fcba3",
    "metadata": {},
    "outputs": [],
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 128,
    "id": "dc7ebc2a",
    "metadata": {},
    "outputs": [],
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 129,
    "id": "ebbb7bf0",
    "metadata": {},
    "outputs": [],
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 130,
    "id": "1a1b4957",
    "metadata": {},
    "outputs": [],
@@ -253,8 +253,46 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b6b86ad5",
+   "metadata": {},
+   "source": [
+    "\"CASA (TTM)\n",
+    "Quý: Q2-2025\n",
+    "Đơn vị: %\n",
+    "\"\t\"NIM (TTM)\n",
+    "Quý: Q2-2025\n",
+    "Đơn vị: %\n",
+    "\"\t\"Tỷ lệ Chi phí/ Thu nhập (TTM)\n",
+    "Quý: Q2-2025\n",
+    "Đơn vị: %\n",
+    "\"\t\"ROA trước dự phòng % (TTM)\n",
+    "Quý: Q2-2025\n",
+    "Đơn vị: %\n",
+    "\"\t\"Nợ xấu (3-5)/ Tổng dư nợ (TTM)\n",
+    "Quý: Q2-2025\n",
+    "Đơn vị: %\n",
+    "\"\t\"Trích lập dự phòng/ Nợ xấu (TTM)\n",
+    "Quý: Q2-2025\n",
+    "Đơn vị: %\n",
+    "\"\t\"Tăng trưởng tín dụng (TTM)\n",
+    "Quý: Q2-2025\n",
+    "Đơn vị: %\n",
+    "\"\t\"Tăng trưởng tiền gửi (TTM)\n",
+    "Quý: Q2-2025\n",
+    "Đơn vị: %\n",
+    "\"\t\"Dư nợ cho vay/Vốn chủ sở hữu (TTM)\n",
+    "Quý: Q2-2025\n",
+    "Đơn vị: %\n",
+    "\"\t\"Dư nợ cho vay/ Tiền gửi (TTM)\n",
+    "Quý: Q2-2025\n",
+    "Đơn vị: %\n",
+    "\"\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 131,
    "id": "70c10ca0",
    "metadata": {},
    "outputs": [],
@@ -276,7 +314,17 @@
     "    'P/E cơ bản (TTM)': 'P/E',\n",
     "    'P/B (TTM)': 'P/B',\n",
     "    'Giá trị doanh nghiệp/ EBITDA (TTM)': 'EV/EBITDA',\n",
-    "    'Vốn hóa thị trường (TTM)': 'Vốn hóa thị trường'\n",
+    "    'Vốn hóa thị trường (TTM)': 'Vốn hóa thị trường',\n",
+    "    'CASA (TTM)': 'CASA',\n",
+    "    'NIM (TTM)': 'NIM',\n",
+    "    'Tỷ lệ Chi phí/ Thu nhập (TTM)': 'CIR',\n",
+    "    'ROA trước dự phòng % (TTM)': 'ROA trước dự phòng',\n",
+    "    'Nợ xấu (3-5)/ Tổng dư nợ (TTM)': 'Nợ xấu',\n",
+    "    'Trích lập dự phòng/ Nợ xấu (TTM)': 'Trích lập dự phòng/Nợ xấu',\n",
+    "    'Tăng trưởng tín dụng (TTM)': 'Tăng trưởng tín dụng',\n",
+    "    'Tăng trưởng tiền gửi (TTM)': 'Tăng trưởng tiền gửi',\n",
+    "    'Dư nợ cho vay/Vốn chủ sở hữu (TTM)': 'Dư nợ cho vay/VCSH',\n",
+    "    'Dư nợ cho vay/ Tiền gửi (TTM)': 'Dư nợ cho vay/Tiền gửi'\n",
     "}\n",
     "\n",
     "ptcb_group_map = {\n",
@@ -308,6 +356,18 @@
     "        'P/B',\n",
     "        'EV/EBITDA',\n",
     "        'Vốn hóa thị trường'\n",
+    "    ],\n",
+    "    'Ngân hàng': [\n",
+    "        'NIM',\n",
+    "        'CASA',\n",
+    "        'CIR',\n",
+    "        'ROA trước dự phòng',\n",
+    "        'Nợ xấu',\n",
+    "        'Trích lập dự phòng/Nợ xấu',\n",
+    "        'Tăng trưởng tín dụng',\n",
+    "        'Tăng trưởng tiền gửi',\n",
+    "        'Dư nợ cho vay/VCSH',\n",
+    "        'Dư nợ cho vay/Tiền gửi'\n",
     "    ]\n",
     "}\n",
     "ptcb_group_map = {metric: group for group, metrics in ptcb_group_map.items() for metric in metrics}"
@@ -315,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 132,
    "id": "b3c99838",
    "metadata": {},
    "outputs": [],
@@ -378,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 133,
    "id": "2cd41bbe",
    "metadata": {},
    "outputs": [],
@@ -466,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 134,
    "id": "7c5d45a5",
    "metadata": {},
    "outputs": [],
