--- a/notebook/stock_analysis.ipynb
+++ b/notebook/stock_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 1,
    "id": "b0e3be46",
    "metadata": {},
    "outputs": [],
@@ -45,17 +45,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 2,
    "id": "a49fcba3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "main_stock = 'HPG'"
+    "main_stock = 'FPT'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 3,
    "id": "dc7ebc2a",
    "metadata": {},
    "outputs": [],
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 4,
    "id": "ebbb7bf0",
    "metadata": {},
    "outputs": [],
@@ -207,7 +207,7 @@
    "id": "9186a4c8",
    "metadata": {},
    "source": [
-    "#### Đọc và làm sạch dữ liệu từ FiinProX"
+    "#### Dữ liệu PTCB - BCTC - CURRENT từ FiinProX"
    ]
   },
   {
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 5,
    "id": "1a1b4957",
    "metadata": {},
    "outputs": [],
@@ -253,46 +253,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "b6b86ad5",
-   "metadata": {},
-   "source": [
-    "\"CASA (TTM)\n",
-    "Quý: Q2-2025\n",
-    "Đơn vị: %\n",
-    "\"\t\"NIM (TTM)\n",
-    "Quý: Q2-2025\n",
-    "Đơn vị: %\n",
-    "\"\t\"Tỷ lệ Chi phí/ Thu nhập (TTM)\n",
-    "Quý: Q2-2025\n",
-    "Đơn vị: %\n",
-    "\"\t\"ROA trước dự phòng % (TTM)\n",
-    "Quý: Q2-2025\n",
-    "Đơn vị: %\n",
-    "\"\t\"Nợ xấu (3-5)/ Tổng dư nợ (TTM)\n",
-    "Quý: Q2-2025\n",
-    "Đơn vị: %\n",
-    "\"\t\"Trích lập dự phòng/ Nợ xấu (TTM)\n",
-    "Quý: Q2-2025\n",
-    "Đơn vị: %\n",
-    "\"\t\"Tăng trưởng tín dụng (TTM)\n",
-    "Quý: Q2-2025\n",
-    "Đơn vị: %\n",
-    "\"\t\"Tăng trưởng tiền gửi (TTM)\n",
-    "Quý: Q2-2025\n",
-    "Đơn vị: %\n",
-    "\"\t\"Dư nợ cho vay/Vốn chủ sở hữu (TTM)\n",
-    "Quý: Q2-2025\n",
-    "Đơn vị: %\n",
-    "\"\t\"Dư nợ cho vay/ Tiền gửi (TTM)\n",
-    "Quý: Q2-2025\n",
-    "Đơn vị: %\n",
-    "\"\n"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 6,
    "id": "70c10ca0",
    "metadata": {},
    "outputs": [],
@@ -315,19 +277,22 @@
     "    'P/B (TTM)': 'P/B',\n",
     "    'Giá trị doanh nghiệp/ EBITDA (TTM)': 'EV/EBITDA',\n",
     "    'Vốn hóa thị trường (TTM)': 'Vốn hóa thị trường',\n",
+    "\n",
+    "    # ===== Các chỉ số mới cho ngành Ngân hàng =====\n",
     "    'CASA (TTM)': 'CASA',\n",
     "    'NIM (TTM)': 'NIM',\n",
     "    'Tỷ lệ Chi phí/ Thu nhập (TTM)': 'CIR',\n",
     "    'ROA trước dự phòng % (TTM)': 'ROA trước dự phòng',\n",
-    "    'Nợ xấu (3-5)/ Tổng dư nợ (TTM)': 'Nợ xấu',\n",
-    "    'Trích lập dự phòng/ Nợ xấu (TTM)': 'Trích lập dự phòng/Nợ xấu',\n",
+    "    'Nợ xấu (3-5)/ Tổng dư nợ (TTM)': 'Tỷ lệ nợ xấu',\n",
+    "    'Trích lập dự phòng/ Nợ xấu (TTM)': 'Tỷ lệ bao phủ nợ xấu',\n",
     "    'Tăng trưởng tín dụng (TTM)': 'Tăng trưởng tín dụng',\n",
     "    'Tăng trưởng tiền gửi (TTM)': 'Tăng trưởng tiền gửi',\n",
     "    'Dư nợ cho vay/Vốn chủ sở hữu (TTM)': 'Dư nợ cho vay/VCSH',\n",
-    "    'Dư nợ cho vay/ Tiền gửi (TTM)': 'Dư nợ cho vay/Tiền gửi'\n",
+    "    'Dư nợ cho vay/ Tiền gửi (TTM)': 'LDR'\n",
     "}\n",
     "\n",
     "ptcb_group_map = {\n",
+    "    # --- Các nhóm cho doanh nghiệp thông thường ---\n",
     "    'Hiệu quả': [\n",
     "        'ROE',\n",
     "        'ROA',\n",
@@ -357,25 +322,27 @@
     "        'EV/EBITDA',\n",
     "        'Vốn hóa thị trường'\n",
     "    ],\n",
-    "    'Ngân hàng': [\n",
-    "        'NIM',\n",
+    "    \n",
+    "    # ===== NHÓM RIÊNG CHO NGÀNH NGÂN HÀNG =====\n",
+    "    'Ngân hàng': {\n",
     "        'CASA',\n",
+    "        'NIM',\n",
     "        'CIR',\n",
     "        'ROA trước dự phòng',\n",
-    "        'Nợ xấu',\n",
-    "        'Trích lập dự phòng/Nợ xấu',\n",
     "        'Tăng trưởng tín dụng',\n",
-    "        'Tăng trưởng tiền gửi',\n",
+    "        'Tăng trưởng tiền gửi', \n",
+    "        'Tỷ lệ nợ xấu',\n",
+    "        'Tỷ lệ bao phủ nợ xấu',\n",
     "        'Dư nợ cho vay/VCSH',\n",
-    "        'Dư nợ cho vay/Tiền gửi'\n",
-    "    ]\n",
+    "        'LDR'\n",
+    "    }\n",
     "}\n",
     "ptcb_group_map = {metric: group for group, metrics in ptcb_group_map.items() for metric in metrics}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 7,
    "id": "b3c99838",
    "metadata": {},
    "outputs": [],
@@ -438,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 8,
    "id": "2cd41bbe",
    "metadata": {},
    "outputs": [],
@@ -526,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 9,
    "id": "7c5d45a5",
    "metadata": {},
    "outputs": [],
@@ -573,12 +540,21 @@
     "        prop_net = temp_df[temp_df['name'].isin(prop_buy_cols)].groupby('ticker')['value'].sum() - \\\n",
     "                temp_df[temp_df['name'].isin(prop_sell_cols)].groupby('ticker')['value'].sum()\n",
     "\n",
-    "        # Tạo DataFrame mới\n",
+    "        # Lấy thông tin ticker từ DataFrame gốc để copy các cột khác (chỉ lấy 1 record đầu tiên cho mỗi ticker)\n",
+    "        ticker_info = temp_df[['ticker', 'industry', 'period', 'unit']].drop_duplicates(subset=['ticker']).set_index('ticker')\n",
+    "\n",
+    "        # Tạo DataFrame mới với đầy đủ các cột\n",
     "        foreign_net_df = foreign_net.reset_index()\n",
     "        foreign_net_df['name'] = 'Giá trị ròng khối ngoại'\n",
+    "        foreign_net_df['industry'] = foreign_net_df['ticker'].map(ticker_info['industry'])\n",
+    "        foreign_net_df['period'] = foreign_net_df['ticker'].map(ticker_info['period'])\n",
+    "        foreign_net_df['unit'] = 'Triệu VND'  # Đặt unit phù hợp cho giá trị ròng\n",
     "\n",
     "        prop_net_df = prop_net.reset_index() \n",
     "        prop_net_df['name'] = 'Giá trị ròng tự doanh'\n",
+    "        prop_net_df['industry'] = prop_net_df['ticker'].map(ticker_info['industry'])\n",
+    "        prop_net_df['period'] = prop_net_df['ticker'].map(ticker_info['period'])\n",
+    "        prop_net_df['unit'] = 'Triệu VND'  # Đặt unit phù hợp cho giá trị ròng\n",
     "\n",
     "        # Cập nhật clean_df_dict\n",
     "        temp_df = pd.concat([\n",
@@ -603,12 +579,12 @@
    "id": "f53c472e",
    "metadata": {},
    "source": [
-    "#### Phân tích BCTC trong 4 năm gần nhất"
+    "#### BCTC trong 4 năm gần nhất"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 19,
    "id": "62d4ac9e",
    "metadata": {},
    "outputs": [],
@@ -617,16 +593,8 @@
     "    stock=main_stock,\n",
     "    year='2025', \n",
     "    quarter='2',\n",
-    "    period_count='16'\n",
+    "    period_count='20'\n",
     ")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "ea36d926",
-   "metadata": {},
-   "source": [
-    "#### So sánh các chỉ số cơ bản với ngành"
    ]
   },
   {
@@ -639,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "99d34be2",
    "metadata": {},
    "outputs": [],
@@ -686,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "b3a59755",
    "metadata": {},
    "outputs": [],
@@ -735,7 +703,7 @@
     "            line_columns=list(line_name_dict.keys()),\n",
     "            chart_config=chart_config,\n",
     "            symbol_name=main_stock,\n",
-    "            path='../output',\n",
+    "            path='../output/chart',\n",
     "            image_name = image_name\n",
     "        )\n",
     "        break\n",
@@ -743,6 +711,88 @@
     "        if attempt == max_attempts - 1:\n",
     "            raise e\n",
     "# fig.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ffef5813",
+   "metadata": {},
+   "source": [
+    "#### Lưu các dữ liệu để phân tích"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d56e87e4",
+   "metadata": {},
+   "source": [
+    "- Dữ liệu BCTC và PTCB các cổ phiếu trong ngành"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "0f354caf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "industry_stock_list = ['BAF', 'VLC', 'DBC', 'HAG']\n",
+    "\n",
+    "current_df = clean_df_dict['current']\n",
+    "current_df = current_df[current_df['ticker'].isin(industry_stock_list)]\n",
+    "current_df.to_csv('../output/csv/clean_current.csv', index=False, encoding='utf-8-sig')\n",
+    "\n",
+    "ptcb_df = clean_df_dict['ptcb']\n",
+    "ptcb_df = ptcb_df[ptcb_df['ticker'].isin(industry_stock_list)]\n",
+    "ptcb_df.to_csv('../output/csv/clean_ptcb.csv', index=False, encoding='utf-8-sig')\n",
+    "\n",
+    "bctc_df = clean_df_dict['bctc']\n",
+    "bctc_df = bctc_df[bctc_df['ticker'].isin(industry_stock_list)]\n",
+    "bctc_df = bctc_df[~bctc_df['group'].str.contains('CTCK', na=False)]\n",
+    "bctc_df = bctc_df[~bctc_df['group'].str.contains('CTCK', na=False)]\n",
+    "bctc_df.to_csv('../output/csv/clean_bctc.csv', index=False, encoding='utf-8-sig')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2338f413",
+   "metadata": {},
+   "source": [
+    "- Dữ liệu BCTC của doanh nghiệp 3 năm liên tiếp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "b0e2ea9f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fs_df = pd.DataFrame()\n",
+    "for report_type in ['BalanceSheet', 'IncomeStatement', 'CashFlow']:\n",
+    "    temp_df = fs_dict[report_type]\n",
+    "    temp_df['type'] = report_type\n",
+    "    fs_df = pd.concat([fs_df, temp_df], ignore_index=True)\n",
+    "\n",
+    "fs_df.to_csv(f'../output/csv/fs_stock.csv', index=False, encoding='utf-8-sig')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0a252df9",
+   "metadata": {},
+   "source": [
+    "- Dữ liệu PTKT"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "7476b18e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "full_stock_ta_df.iloc[:60].to_csv(f'../output/csv/ta_stock.csv', index=False, encoding='utf-8-sig')"
    ]
   }
  ],
