--- a/notebook/stock_analysis.ipynb
+++ b/notebook/stock_analysis.ipynb
@@ -45,12 +45,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "a49fcba3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "main_stock = 'FPT'"
+    "main_stock = 'VND'"
    ]
   },
   {
