--- a/notebook/technical_sc.ipynb
+++ b/notebook/technical_sc.ipynb
@@ -38,6 +38,16 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "f9156422",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stock_list = [\"SSI\", \"VIX\", \"VND\", \"VDS\", \"HCM\", \"SHS\", \"MBS\", \"CTS\", \"ORS\", \"VCI\", \"FTS\", \"BSI\", \"BVS\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "45a0b30b",
    "metadata": {},
    "outputs": [],
@@ -48,25 +58,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
-   "id": "c84974d0",
+   "execution_count": 4,
+   "id": "467855fb",
    "metadata": {},
    "outputs": [],
    "source": [
     "date_series = get_mongo_collection(ref_db, 'date_series')\n",
     "today = date_series.iloc[0]['date']\n",
-    "projection={\"_id\": 0, 'date': 1, 'ticker': 1, 'vol_ratio': 1, 'W_MTSI': 1, 'M_MTSI': 1, 'Q_MTSI': 1, 'Y_MTSI': 1, 'W_MRVI': 1, 'M_MRVI': 1, 'Q_MRVI': 1, 'Y_MRVI': 1}\n",
     "\n",
+    "projection={\"_id\": 0, 'date': 1, 'ticker': 1, 'vol_ratio': 1, 'W_MTSI': 1, 'M_MTSI': 1, 'Q_MTSI': 1, 'Y_MTSI': 1, 'W_MRVI': 1, 'M_MRVI': 1, 'Q_MRVI': 1, 'Y_MRVI': 1}\n",
     "today_stock_df = get_mongo_collection(stock_db, 'today_stock', projection=projection)\n",
-    "history_stock_df = get_mongo_collection(stock_db, 'history_stock', projection=projection,\n",
-    "                                        find_query={\"date\": {\"$in\": date_series['date'].iloc[:5].tolist()}})\n",
-    "full_stock_df = pd.concat([today_stock_df, history_stock_df])\n",
-    "stock_list = [\"SSI\", \"VIX\", \"VND\", \"VDS\", \"HCM\", \"SHS\", \"MBS\", \"CTS\", \"ORS\", \"VCI\", \"FTS\", \"BSI\", \"BVS\"]"
+    "history_stock_df = get_mongo_collection(stock_db, 'history_stock', projection=projection, find_query={\"date\": {\"$in\": date_series['date'].iloc[:3].tolist()}})\n",
+    "full_stock_df = pd.concat([today_stock_df, history_stock_df])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 5,
    "id": "83068798",
    "metadata": {},
    "outputs": [],
@@ -75,13 +83,13 @@
     "vol_ratio_df['date'] = vol_ratio_df['date'].astype(str)\n",
     "\n",
     "vol_ratio_df = vol_ratio_df.pivot(index=\"ticker\", columns=\"date\", values=\"vol_ratio\")\n",
-    "vol_ratio_df['total_ratio'] = vol_ratio_df.sum(axis=1)\n",
-    "vol_ratio_df = vol_ratio_df[vol_ratio_df.index.isin(stock_list)].sort_values(by='total_ratio', ascending=False).reset_index()"
+    "vol_ratio_df['mean_ratio'] = vol_ratio_df.mean(axis=1)\n",
+    "vol_ratio_df = vol_ratio_df[vol_ratio_df.index.isin(stock_list)].sort_values(by='mean_ratio', ascending=False).reset_index()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 6,
    "id": "ee84a8f6",
    "metadata": {},
    "outputs": [],
@@ -93,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 7,
    "id": "a531144c",
    "metadata": {},
    "outputs": [],
@@ -105,12 +113,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 8,
    "id": "fd972ff5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "with pd.ExcelWriter('../output/other/custom.xlsx') as writer:\n",
+    "with pd.ExcelWriter('../output/technical_sc.xlsx') as writer:\n",
     "    vol_ratio_df.to_excel(writer, sheet_name='Vol_Ratio', index=False)\n",
     "    mrvi_df.to_excel(writer, sheet_name='MRVI', index=False)\n",
     "    mtsi_df.to_excel(writer, sheet_name='MTSI', index=False)"
