--- a/notebook/fa_data.ipynb
+++ b/notebook/fa_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "id": "b0e3be46",
    "metadata": {},
    "outputs": [],
@@ -36,26 +36,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "f05e09e6",
-   "metadata": {},
-   "source": [
-    "#### Lựa chọn cổ phiếu phân tích"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "a49fcba3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "main_stock = 'VND'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "id": "dc7ebc2a",
    "metadata": {},
    "outputs": [],
@@ -193,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "id": "ebbb7bf0",
    "metadata": {},
    "outputs": [],
@@ -220,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "id": "1a1b4957",
    "metadata": {},
    "outputs": [],
@@ -254,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "id": "70c10ca0",
    "metadata": {},
    "outputs": [],
@@ -342,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "id": "b3c99838",
    "metadata": {},
    "outputs": [],
@@ -405,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "id": "2cd41bbe",
    "metadata": {},
    "outputs": [],
@@ -493,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "id": "7c5d45a5",
    "metadata": {},
    "outputs": [],
@@ -584,133 +566,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "62d4ac9e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "fs_dict = get_financial_statements(\n",
-    "    stock=main_stock,\n",
-    "    year='2025', \n",
-    "    quarter='2',\n",
-    "    period_count='20'\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "70fa97a4",
-   "metadata": {},
-   "source": [
-    "#### Phân tích kĩ thuật"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "id": "99d34be2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "projection = {\n",
-    "    \"_id\": 0,\n",
-    "    \"date\": 1,\n",
-    "    \"ticker\": 1,\n",
-    "    \"open\": 1,\n",
-    "    \"high\": 1,\n",
-    "    \"low\": 1,\n",
-    "    \"close\": 1,\n",
-    "    \"pct_change\": 1,\n",
-    "    \"diff\": 1,\n",
-    "    \"volume\": 1,\n",
-    "    \"option\": 1,\n",
-    "    \"SMA_20\": 1,\n",
-    "    \"SMA_60\": 1,\n",
-    "    \"RSI_14\": 1,\n",
-    "    \"week_open\": 1,\n",
-    "    \"month_prev_high\": 1,\n",
-    "    \"month_prev_low\": 1,\n",
-    "    \"month_open\": 1,\n",
-    "    \"quarter_prev_high\": 1,\n",
-    "    \"quarter_prev_low\": 1,\n",
-    "    \"quarter_open\": 1,\n",
-    "    \"year_open\": 1,\n",
-    "    \"MFIBO_0382\": 1,\n",
-    "    \"MFIBO_0500\": 1,\n",
-    "    \"MFIBO_0618\": 1,\n",
-    "    \"QFIBO_0382\": 1,\n",
-    "    \"QFIBO_0500\": 1,\n",
-    "    \"QFIBO_0618\": 1,\n",
-    "\t\"YFIBO_0382\": 1,\n",
-    "    \"YFIBO_0500\": 1,\n",
-    "    \"YFIBO_0618\": 1,\n",
-    "}\n",
+    "# fs_dict = get_financial_statements(\n",
+    "#     stock=main_stock,\n",
+    "#     year='2025', \n",
+    "#     quarter='2',\n",
+    "#     period_count='20'\n",
+    "# )\n",
     "\n",
+    "# fs_df = pd.DataFrame()\n",
+    "# for report_type in ['BalanceSheet', 'IncomeStatement', 'CashFlow']:\n",
+    "#     temp_df = fs_dict[report_type]\n",
+    "#     temp_df['type'] = report_type\n",
+    "#     fs_df = pd.concat([fs_df, temp_df], ignore_index=True)\n",
     "\n",
-    "today_stock_df = get_mongo_collection(stock_db, \"today_stock\", find_query={\"ticker\": main_stock}, projection=projection)\n",
-    "history_stock_df = get_mongo_collection(stock_db, \"history_stock\", find_query={\"ticker\": main_stock}, projection=projection)\n",
-    "full_stock_ta_df = pd.concat([today_stock_df, history_stock_df], axis=0, ignore_index=True).iloc[:120]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "id": "b3a59755",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "image_name = f'TA_{main_stock}.png'\n",
-    "\n",
-    "line_name_dict = {\n",
-    "    'SMA_20': 'SMA 20',\n",
-    "    'SMA_60': 'SMA 60',\n",
-    "    'week_open': 'WEEK OPEN',\n",
-    "    'month_open': 'MONTH OPEN',\n",
-    "    'quarter_open': 'QUARTER OPEN',\n",
-    "    'year_open': 'YEAR OPEN',\n",
-    "    'month_prev_high': 'LAST MHIGH',\n",
-    "    'month_prev_low': 'LAST MLOW',\n",
-    "    'quarter_prev_high': 'LAST QHIGH',\n",
-    "    'quarter_prev_low': 'LAST QLOW',\n",
-    "    'MFIBO_0382': 'MFIBO 0.382',\n",
-    "    'MFIBO_0500': 'MFIBO 0.500',\n",
-    "    'MFIBO_0618': 'MFIBO 0.618',\n",
-    "    'QFIBO_0382': 'QFIBO 0.382',\n",
-    "    'QFIBO_0500': 'QFIBO 0.500',\n",
-    "    'QFIBO_0618': 'QFIBO 0.618',\n",
-    "\t'YFIBO_0382': 'YFIBO 0.382',\n",
-    "    'YFIBO_0500': 'YFIBO 0.500',\n",
-    "    'YFIBO_0618': 'YFIBO 0.618'\n",
-    "}\n",
-    "\n",
-    "chart_config = create_chart_config(\n",
-    "\ttitle_font_size=30,\n",
-    "\taxis_font_size=24,\n",
-    "\ttag_font_size=24,\n",
-    "\tprice_tag_font_size=24,\n",
-    "    min_spacing_ratio = 0.042,\n",
-    "\tmargin=dict(l=20, r=220, t=20, b=20, pad=10)\n",
-    ")\n",
-    "\n",
-    "max_attempts = 5\n",
-    "for attempt in range(max_attempts):\n",
-    "    try:\n",
-    "        fig, fig_images = create_financial_chart(\n",
-    "            full_stock_ta_df.sort_values('date'), # DataFrame của bạn\n",
-    "            width=1400,\n",
-    "            height=1200,\n",
-    "            line_name_dict=line_name_dict,\n",
-    "            line_columns=list(line_name_dict.keys()),\n",
-    "            chart_config=chart_config,\n",
-    "            symbol_name=main_stock,\n",
-    "            path='../output/chart',\n",
-    "            image_name = image_name\n",
-    "        )\n",
-    "        break\n",
-    "    except Exception as e:\n",
-    "        if attempt == max_attempts - 1:\n",
-    "            raise e\n",
-    "# fig.show()"
+    "# fs_df.to_csv(f'../output/csv/fs_stock.csv', index=False, encoding='utf-8-sig')"
    ]
   },
   {
@@ -722,77 +596,27 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "d56e87e4",
-   "metadata": {},
-   "source": [
-    "- Dữ liệu BCTC và PTCB các cổ phiếu trong ngành"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 22,
    "id": "0f354caf",
    "metadata": {},
    "outputs": [],
    "source": [
-    "industry_stock_list = ['BAF', 'VLC', 'DBC', 'HAG']\n",
+    "industry_stock_list = [\"SSI\", \"VIX\", \"VND\", \"VDS\", \"HCM\", \"SHS\", \"MBS\", \"CTS\", \"ORS\", \"VCI\", \"FTS\", \"BSI\", \"BVS\"]\n",
     "\n",
     "current_df = clean_df_dict['current']\n",
     "current_df = current_df[current_df['ticker'].isin(industry_stock_list)]\n",
-    "current_df.to_csv('../output/csv/clean_current.csv', index=False, encoding='utf-8-sig')\n",
+    "current_df.to_csv('../output/clean_current.csv', index=False, encoding='utf-8-sig')\n",
     "\n",
     "ptcb_df = clean_df_dict['ptcb']\n",
     "ptcb_df = ptcb_df[ptcb_df['ticker'].isin(industry_stock_list)]\n",
-    "ptcb_df.to_csv('../output/csv/clean_ptcb.csv', index=False, encoding='utf-8-sig')\n",
+    "ptcb_df.to_csv('../output/clean_ptcb.csv', index=False, encoding='utf-8-sig')\n",
     "\n",
     "bctc_df = clean_df_dict['bctc']\n",
     "bctc_df = bctc_df[bctc_df['ticker'].isin(industry_stock_list)]\n",
     "bctc_df = bctc_df[~bctc_df['group'].str.contains('CTCK', na=False)]\n",
     "bctc_df = bctc_df[~bctc_df['group'].str.contains('CTCK', na=False)]\n",
-    "bctc_df.to_csv('../output/csv/clean_bctc.csv', index=False, encoding='utf-8-sig')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "2338f413",
-   "metadata": {},
-   "source": [
-    "- Dữ liệu BCTC của doanh nghiệp 3 năm liên tiếp"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "id": "b0e2ea9f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fs_df = pd.DataFrame()\n",
-    "for report_type in ['BalanceSheet', 'IncomeStatement', 'CashFlow']:\n",
-    "    temp_df = fs_dict[report_type]\n",
-    "    temp_df['type'] = report_type\n",
-    "    fs_df = pd.concat([fs_df, temp_df], ignore_index=True)\n",
-    "\n",
-    "fs_df.to_csv(f'../output/csv/fs_stock.csv', index=False, encoding='utf-8-sig')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "0a252df9",
-   "metadata": {},
-   "source": [
-    "- Dữ liệu PTKT"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "id": "7476b18e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "full_stock_ta_df.iloc[:60].to_csv(f'../output/csv/ta_stock.csv', index=False, encoding='utf-8-sig')"
+    "bctc_df.to_csv('../output/clean_bctc.csv', index=False, encoding='utf-8-sig')"
    ]
   }
  ],
